# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  dot_gitconfig  dot_nbrc  dot_p10k.zsh  dot_zshaliases  dot_zshaliases.tmpl  dot_zshrc  dot_zshrc.tmpl  encrypted_dot_gitconfig.age  key.txt.age  packages.aur.tmpl  packages.pacman.tmpl  run_after_20-enable-ram-watch-timer.sh.tmpl  run_before_00-install-yay.sh.tmpl  run_once_02-install-tmuxinator.sh.tmpl  run_once_03-sync-wallpapers.sh.tmpl  run_once_04-install-rust.sh.tmpl  run_once_05-install-uv.sh.tmpl  run_once_06-install-mise.sh.tmpl  run_once_install-packages.sh.tmpl  run_once_install-tmuxinator.sh.tmpl  run_once_sync-wallpapers.sh.tmpl  run_onchange_before_01-install-packages.sh.tmpl  run_onchange_before_02-install-pnpm-global-packages.sh.tmpl  run_onchange_before_decrypt-private-key.sh.tmpl
.chezmoidata/: packages.yaml
.chezmoitemplates/legacy/: run_once_01-install-pnpm-and-node-lts.sh.tmpl
dot_codex/: encrypted_private_config.toml.age
dot_config/: mimeapps.list
dot_config/atac/: executable_launch-script.sh  vim_key_bindings.toml
dot_config/eww/: _variables.scss  eww.scss  eww.yuck
dot_config/qtile/: autostart.py  config.py  dot_flake8  groups.py  keys.py  mods.py  mouse.py  pyproject.toml  screens.py  test.py  utils.py
dot_intelephense/: encrypted_licence.txt.age
private_dot_ssh/: encrypted_config.age  encrypted_id_rsa.pub.age  encrypted_lf_core.pub.age  encrypted_org.pub.age  encrypted_private_id_rsa.age  encrypted_private_lf_core.age  encrypted_private_org.age
(+134 files in other folders)
